--- a/src/db.properties
+++ b/src/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/sccdb
+url=jdbc:mysql://23.21.219.40/sccdb
 user=root
-password=1qa2ws
+password=
