--- a/src/db.properties
+++ b/src/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://23.21.219.40/SCC
+url=jdbc:mysql://localhost/SCC
 user=root
-password=
+password=Jesus
